# air_bnb_clone

./: .gitignore  main.py  pyproject.toml  some_practice.py
houses/: models.py
houses/migrations/: 0001_initial.py
scripts/: connect_docker_postgresql.sh  create_database.sh
